--- a/Views/Gifts/Create.cshtml
+++ b/Views/Gifts/Create.cshtml
@@ -17,11 +17,14 @@
                 <input asp-for="GiftName" class="form-control" />
                 <span asp-validation-for="GiftName" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsApproved" /> @Html.DisplayNameFor(model => model.IsApproved)
-                </label>
-            </div>
+            @if (User.IsInRole("Santa"))
+            {
+                <div class="form-group form-check">
+                    <label class="form-check-label">
+                        <input class="form-check-input" asp-for="IsApproved" /> @Html.DisplayNameFor(model => model.IsApproved)
+                    </label>
+                </div>
+            }
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
