--- a/Views/GiftRequests/Create.cshtml
+++ b/Views/GiftRequests/Create.cshtml
@@ -17,6 +17,11 @@
                 <select asp-for="GiftId" class ="form-control" asp-items="ViewBag.GiftId"></select>
             </div>
             <div class="form-group">
+                <label asp-for="Description" class="control-label"></label>
+                <textarea asp-for="Description" class="form-control"></textarea>
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Request" class="btn btn-primary" />
             </div>
         </form>
