--- a/Views/GiftRequests/Index.cshtml
+++ b/Views/GiftRequests/Index.cshtml
@@ -19,6 +19,9 @@
                 @Html.DisplayNameFor(model => model.UserName)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.IsApproved)
             </th>
             <th></th>
@@ -32,6 +35,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.UserName)
+            </td>
+            <td>
+                @Html.Raw(item.Description)
             </td>
             <td>
                 @(item.IsApproved ? "Approved" : "Pending")
